<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/big_icon_notificationImv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/notification_imv_desc"
            android:paddingBottom="1dp"
            android:paddingEnd="6dp"
            android:paddingLeft="4dp"
            android:paddingRight="6dp"
            android:paddingStart="4dp"
            app:srcCompat="@drawable/ic_pawprint" />

        <ImageView
            android:id="@+id/small_icon_notificationImv"
            android:layout_width="18.2dp"
            android:layout_height="18.2dp"
            android:layout_alignBottom="@id/big_icon_notificationImv"
            android:layout_alignEnd="@id/big_icon_notificationImv"
            android:layout_alignRight="@id/big_icon_notificationImv"
            android:contentDescription="@string/notification_badge_imv_desc"
            app:srcCompat="@drawable/ic_info" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/notification_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/icon_container"
        android:layout_toRightOf="@+id/icon_container"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingStart="6dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/content_title_notificationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title" />

        <TextView
            android:id="@+id/sub_content_title_notificationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_subtext"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_container"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cE_bg_imv"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/notification_big_image_desc"
            app:srcCompat="@drawable/ic_cat" />

        <TextView
            android:id="@+id/cE_noteMsg_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="8"
            android:text="msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_info"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/cE_action_imv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/notification_action_imv_desc"
            app:srcCompat="@drawable/ic_check_notification" />

        <Button
            android:id="@+id/cE_action_btn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="DONE"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/timestamp_notificationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingEnd="3dp"
        android:paddingRight="3dp"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification.Time"
        tools:ignore="RtlSymmetry" />


</RelativeLayout>
